--- a/web/.htaccess
+++ b/web/.htaccess
@@ -18,14 +18,16 @@ DirectoryIndex app.php
 </IfModule>
 
 <IfModule mod_rewrite.c>
+
+
     RewriteEngine On
     RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
     RewriteRule ^(.*) - [E=BASE:%1]
     RewriteCond %{ENV:REDIRECT_STATUS} ^$
-    RewriteRule ^app_dev.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]    ##### this is the part that you should tweak, have the .htaccess point the request to app_dev.php, since the routing.yml is empty initially
+    # RewriteRule ^app_dev.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]    ##### this is the part that you should tweak, have the .htaccess point the request to app_dev.php, since the routing.yml is empty initially
     RewriteCond %{REQUEST_FILENAME} -f
     RewriteRule .? - [L]
-    RewriteRule .? %{ENV:BASE}/app_dev.php [L]        ##### this is the part that you should tweak, have the .htaccess point the request to app_dev.php, since the routing.yml is empty initially
+    # RewriteRule .? %{ENV:BASE}/app_dev.php [L]        ##### this is the part that you should tweak, have the .htaccess point the request to app_dev.php, since the routing.yml is empty initially
 </IfModule>
 
 <IfModule !mod_rewrite.c>
