--- a/web/.htaccess
+++ b/web/.htaccess
@@ -21,17 +21,23 @@ DirectoryIndex app.php
 
 
     RewriteEngine On
+    RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
+    RewriteRule ^(.*) - [E=BASE:%1]
+    RewriteCond %{ENV:REDIRECT_STATUS} ^$
+    RewriteRule ^app_dev.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]    ##### this is the part that you should tweak, have the .htaccess point the request to app_dev.php, since the routing.yml is empty initially
+    RewriteCond %{REQUEST_FILENAME} -f
+    RewriteRule .? - [L]
+    RewriteRule .? %{ENV:BASE}/app_dev.php [L]        ##### this is the part that you should tweak, have the .htaccess point the request to app_dev.php, since the routing.yml is empty initially
 
-RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
-RewriteRule ^(.*) - [E=BASE:%1]
+#    RewriteEngine On
+#    RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
+#    RewriteRule ^(.*) - [E=BASE:%1]
+#    RewriteCond %{ENV:REDIRECT_STATUS} ^$
+#    RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
+#    RewriteCond %{REQUEST_FILENAME} -f
+#    RewriteRule .? - [L]
+#    RewriteRule .? %{ENV:BASE}/app.php [L]
 
-RewriteCond %{ENV:REDIRECT_STATUS} ^$
-RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
-
-RewriteCond %{REQUEST_FILENAME} -f
-RewriteRule .? - [L]
-
-RewriteRule .? %{ENV:BASE}/app.php [L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
