--- a/web/.htaccess
+++ b/web/.htaccess
@@ -26,11 +26,11 @@ DirectoryIndex app.php
 
     RewriteCond %{ENV:REDIRECT_STATUS} ^$
     RewriteRule ^app_dev.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
-    RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
-#    RewriteCond %{REQUEST_FILENAME} -f
+#    RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
+    RewriteCond %{REQUEST_FILENAME} -f
     RewriteRule .? - [L]
-#    RewriteRule .? %{ENV:BASE}/app_dev.php [L]
-    RewriteRule .? %{ENV:BASE}/app.php [L]
+    RewriteRule .? %{ENV:BASE}/app_dev.php [L]
+#    RewriteRule .? %{ENV:BASE}/app.php [L]
 
 #    RewriteEngine On
 #    RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
