--- a/web/.htaccess
+++ b/web/.htaccess
@@ -25,9 +25,9 @@ DirectoryIndex app.php
     RewriteRule ^(.*) - [E=BASE:%1]
 
     RewriteCond %{ENV:REDIRECT_STATUS} ^$
-#    RewriteRule ^app_dev.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
+    RewriteRule ^app_dev.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
     RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
-    RewriteCond %{REQUEST_FILENAME} -f
+#    RewriteCond %{REQUEST_FILENAME} -f
     RewriteRule .? - [L]
 #    RewriteRule .? %{ENV:BASE}/app_dev.php [L]
     RewriteRule .? %{ENV:BASE}/app.php [L]
